# logger-bundle

./: environment.yml  pyproject.toml
.github/workflows/: main.yml
src/loggerbundle/: LoggerBundleTest.py
src/loggerbundle/LoggerBundleTest/: config_test.yaml
src/loggerbundle/azure/: AzureLogHandlerFactory.py
src/loggerbundle/handler/: LogHandlerInterface.py
