[tool.poetry]
name = "logger-bundle"
version = "0.6.1"
description = "Logger bundle for the Pyfony framework"
readme = "README.md"
repository = "https://github.com/pyfony/logger-bundle"

license = "MIT"

authors = [
    "Jiri Koutny <jiri.koutny@datasentics.com>"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

include = ["*.yaml"]

packages = [
    { include = "loggerbundle", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
colorlog = "^4.0"
pyfony-bundles = "^0.3.2"

[tool.poetry.dev-dependencies]
pylint = "^2.4"
pytest = "^5.2"
pyfony-core = "^0.7.1"

[tool.poetry.plugins."pyfony.bundle"]
create = "loggerbundle.LoggerBundle:LoggerBundle"

[pyfony.bootstrap]
containerInit = "pyfonycore.container.containerInit:initWithCurrentBundle"
rootModuleName = "loggerbundle"
